published ancestry doc on readme

--- a/5e-ancestries.html
+++ b/5e-ancestries.html
@@ -10,7 +10,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Sequestered in high mountains atop tall trees, the aarakocra, sometimes called birdfolk, evoke fear and wonder.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Dexterity, +1 Wisdom, Flight, Talons</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Dexterity, +1 Wisdom, Flight, Talons</li>
                     </div>
                 </div>
             </div>
@@ -22,8 +22,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">Aasimar are placed in the world to serve as guardians of law and good. Their patrons expect them to strike at evil, lead by example, and further the cause of justice.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Charisma, Darkvision, Celestial Resistance, Healing Hands, Light Bearer</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Charisma, Darkvision, Celestial Resistance, Healing Hands, Light Bearer</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Dragonborn look very much like dragons standing erect in humanoid form, though they lack wings or a tail.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Strength, +1 Charisma, Draconic Ancestry, Breath Weapon, Damage Resistance.</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Strength, +1 Charisma, Draconic Ancestry, Breath Weapon, Damage Resistance.</li>
                     </div>
                 </div>
             </div>
@@ -49,8 +49,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">Bold and hardy, dwarves are known as skilled warriors, miners, and workers of stone and metal.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Constitution, Darkvision, Dwarven Resilience, Dwarven Combat Training, Stonecunning</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Constitution, Darkvision, Dwarven Resilience, Dwarven Combat Training, Stonecunning</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">Elves are a magical people of otherworldly grace, living in the world but not entirely part of it.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Dexterity, Darkvision, Keen Senses, Fey Ancestry, Trance</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Dexterity, Darkvision, Keen Senses, Fey Ancestry, Trance</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="panel-body">
                         <h4 class="text-center"></h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> </li>
+                        <li class="list-group-item"><b>Traits:</b> </li>
                     </div>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">Genasi carry the power of the elemental planes of air, earth, fire, and water in their blood.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Constitution, Air, Earth, Fire, Water Subraces</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Constitution, Air, Earth, Fire, Water Subraces</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -102,8 +102,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">A gnome’s energy and enthusiasm for living shines through every inch of his or her tiny body.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Intelligence, Darkvision, Gnome Cunning</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Intelligence, Darkvision, Gnome Cunning</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Strong and reclusive, every day brings a new challenge to a goliath.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Strength, +1 Constitution, Natural Athlete, Stone's Endurance, Powerful Build, Mountain Born</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Strength, +1 Constitution, Natural Athlete, Stone's Endurance, Powerful Build, Mountain Born</li>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Half-elves combine what some say are the best qualities of their elf and human parents.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Charisma, +1 to Two Other Ability Scores, Darkvision, Fey Ancestry, Skill Versatility</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Charisma, +1 to Two Other Ability Scores, Darkvision, Fey Ancestry, Skill Versatility</li>
                     </div>
                 </div>
             </div>
@@ -141,8 +141,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">The diminutive halflings survive in a world full of larger creatures by avoiding notice or, barring that, avoiding offense.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Dexterity, Lucky, Brave, Halfling Nimbleness</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Dexterity, Lucky, Brave, Halfling Nimbleness</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Half-orcs’ grayish pigmentation, sloping foreheads, jutting jaws, prominent teeth, and towering builds make their orcish heritage plain for all to see.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Strength, +1 Constitution, Darkvision, Menacing, Relentless Endurance, Savage Attacks</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Strength, +1 Constitution, Darkvision, Menacing, Relentless Endurance, Savage Attacks</li>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     <div class="panel-body">
                         <h4 class="text-center">Humans are the most adaptable and ambitious people among the common races. Whatever drives them, humans are the innovators, the achievers, and the pioneers of the worlds.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +1 to All Ability Scores, Extra Language</li>
+                        <li class="list-group-item"><b>Traits:</b> +1 to All Ability Scores, Extra Language</li>
                     </div>
                 </div>
             </div>
@@ -180,8 +180,8 @@
                     <div class="panel-body">
                         <h4 class="text-center">To be greeted with stares and whispers, to suffer violence and insult on the street, to see mistrust and fear in every eye: this is the lot of the tiefling.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Racial Traits:</b> +2 Charisma, Darkvision, Hellish Resistance, Infernal Legacy</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Charisma, Darkvision, Hellish Resistance, Infernal Legacy</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
                     </div>
                 </div>
             </div>
