--- a/5e-ancestries.html
+++ b/5e-ancestries.html
@@ -8,7 +8,7 @@
                 <div class="panel-heading">Aarakocra</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">Sequestered in high mountains atop tall trees, the aarakocra, sometimes called birdfolk, evoke fear and wonder.</h4>
+                        <h4 class="text-center">Sequestered in high mountains atop tall trees, the aarakocra, sometimes called birdfolk, can evoke both fear and wonder.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Dexterity, +1 Wisdom, Flight, Talons</li>
                     </div>
@@ -47,7 +47,7 @@
                 <div class="panel-heading">Dwarf</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">Bold and hardy, dwarves are known as skilled warriors, miners, and workers of stone and metal.</h4>
+                        <h4 class="text-center">Bold and hardy, dwarves are known as skilled warriors, miners, and workers of stone and metal. Scottish accent not required.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Constitution, Darkvision, Dwarven Resilience, Dwarven Combat Training, Stonecunning</li>
                         <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
@@ -73,9 +73,9 @@
                 <div class="panel-heading">Firbolg</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center"></h4>
+                        <h4 class="text-center">Firbolg tribes cloister in remote forest strongholds, preferring to spend their days in quiet harmony with the woods.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Traits:</b> </li>
+                        <li class="list-group-item"><b>Traits:</b> +2 Wisdom, +1 Strength, Firbolg Magic, Hidden Step, Powerful Build, Speech of Beast and Leaf</li>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <div class="panel-heading">Gnome</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">A gnome’s energy and enthusiasm for living shines through every inch of his or her tiny body.</h4>
+                        <h4 class="text-center">A gnome’s energy and enthusiasm for living shines through every inch of their tiny body.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Intelligence, Darkvision, Gnome Cunning</li>
                         <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
@@ -152,7 +152,7 @@
                 <div class="panel-heading">Half-Orc</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">Half-orcs’ grayish pigmentation, sloping foreheads, jutting jaws, prominent teeth, and towering builds make their orcish heritage plain for all to see.</h4>
+                        <h4 class="text-center">Half-orcs’ duller pigmentation, sloping foreheads, jutting jaws, prominent teeth, and towering builds make their orcish heritage plain for all to see.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Strength, +1 Constitution, Darkvision, Menacing, Relentless Endurance, Savage Attacks</li>
                     </div>
@@ -166,9 +166,9 @@
                 <div class="panel-heading">Human</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">Humans are the most adaptable and ambitious people among the common races. Whatever drives them, humans are the innovators, the achievers, and the pioneers of the worlds.</h4>
+                        <h4 class="text-center">Humans are the most adaptable among the common ancestries. Whatever drives them, humans are the innovators, the achievers, and the pioneers of the worlds.</h4>
                         <br/>
-                        <li class="list-group-item"><b>Traits:</b> +1 to All Ability Scores, Extra Language</li>
+                        <li class="list-group-item"><b>Traits:</b> +2 and +1 to Ability Scores of your choice, Extra Language and Toolset, Improvise</li>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 <div class="panel-heading">Tiefling</div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <h4 class="text-center">To be greeted with stares and whispers, to suffer violence and insult on the street, to see mistrust and fear in every eye: this is the lot of the tiefling.</h4>
+                        <h4 class="text-center">Tieflings' infernal heritage has left a clear imprint on their appearance, giving them horns, tails, and a range of skin tones. They commonly are greeted with stares, whispers, and fear.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Charisma, Darkvision, Hellish Resistance, Infernal Legacy</li>
                         <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
