--- a/5e-classes.html
+++ b/5e-classes.html
@@ -14,7 +14,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Strength and Constitution.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Light armor, a shield, a club, 3 handaxes, a belt of daggers, a spear and a big ole sword(or axe)(or both).</li>
                         <br/>
-                        <small class="text-right">Complexity: ★☆☆☆</small>
+                        <small>Complexity: ★☆☆☆</small>
                     </div>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Dexterity and Charisma.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Light armor, a rapier, a crossbow, and a song or story on their mind.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★★☆</small>
+                        <small>Complexity: ★★★☆</small>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Wisdom and Charisma.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Medium armor, a shield, a mace, and a holy symbol.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★★☆</small>
+                        <small>Complexity: ★★★☆</small>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Intelligence and Wisdom.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Light armor(non metal), a spear or quarterstaff, and a longbow.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★★★</small>
+                        <small>Complexity: ★★★★</small>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Strength and Constitution.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Heavy armor, a shield, and a longsword.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★☆☆☆</small>
+                        <small>Complexity: ★☆☆☆</small>
                     </div>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Dexterity and Wisdom.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Handwraps and a weapon from their order.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★☆☆</small>
+                        <small>Complexity: ★★☆☆</small>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Strength and Charisma.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Heavy armor, a shield, a longsword, and a chip on their shoulder.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★☆☆</small>
+                        <small>Complexity: ★★☆☆</small>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Dexterity and Wisdom.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Medium armor, 2 daggers, 2 shortswords, a longbow, and a quiver full of arrows.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★☆☆</small>
+                        <small>Complexity: ★★☆☆</small>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Dexterity and Intelligence.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Light armor, 6 daggers, a vial of poison, a shortbow, and a shortsword.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★☆☆</small>
+                        <small>Complexity: ★★☆☆</small>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Constitution and Charisma.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> A quarterstaff and 3 daggers.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★★☆</small>
+                        <small>Complexity: ★★★☆</small>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Wisdom and Charisma.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> Light armor and a quarterstaff.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★☆☆☆</small>
+                        <small>Complexity: ★☆☆☆</small>
                     </div>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                         <li class="list-group-item"><b>Solves challenges with:</b> Intelligence and Wisdom.</li>
                         <li class="list-group-item"><b>Probably carrying:</b> A spellbook, a dagger, and an object of magical research.</li>
                         <br/>
-                        <small class="text-right">Complexity: ★★★★</small>
+                        <small>Complexity: ★★★★</small>
                     </div>
                 </div>
             </div>
