--- a/5e-ancestries.html
+++ b/5e-ancestries.html
@@ -23,7 +23,7 @@
                         <h4 class="text-center">Aasimar are placed in the world to serve as guardians of law and good. Their patrons expect them to strike at evil, lead by example, and further the cause of justice.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Charisma, Darkvision, Celestial Resistance, Healing Hands, Light Bearer</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         <h4 class="text-center">Bold and hardy, dwarves are known as skilled warriors, miners, and workers of stone and metal. Scottish accent not required.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Constitution, Darkvision, Dwarven Resilience, Dwarven Combat Training, Stonecunning</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         <h4 class="text-center">Elves are a magical people of otherworldly grace, living in the world but not entirely part of it.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Dexterity, Darkvision, Keen Senses, Fey Ancestry, Trance</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                         <h4 class="text-center">Genasi carry the power of the elemental planes of air, earth, fire, and water in their blood.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Constitution, Air, Earth, Fire, Water Subraces</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                         <h4 class="text-center">A gnome’s energy and enthusiasm for living shines through every inch of their tiny body.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Intelligence, Darkvision, Gnome Cunning</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                         <h4 class="text-center">The diminutive halflings survive in a world full of larger creatures by avoiding notice or, barring that, avoiding offense.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Dexterity, Lucky, Brave, Halfling Nimbleness</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                         <h4 class="text-center">Tieflings' infernal heritage has left a clear imprint on their appearance, giving them horns, tails, and a range of skin tones. They commonly are greeted with stares, whispers, and fear.</h4>
                         <br/>
                         <li class="list-group-item"><b>Traits:</b> +2 Charisma, Darkvision, Hellish Resistance, Infernal Legacy</li>
-                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additionalTraits</li>
+                        <li class="list-group-item"><b>Subrace Variety:</b> Choice between different subraces that offer additional traits</li>
                     </div>
                 </div>
             </div>
