updated background notes

--- a/5e-backgrounds.html
+++ b/5e-backgrounds.html
@@ -5,8 +5,8 @@
 <div class="container">
     <h1>Character Backgrounds - <small>The stuff you did before adventuring</small></h1>
     <p class="lead">
-        Where did you come from? A life of luxury or poverty? Did you have a job or were you a full time student? This
-        choice determines what skills you developed before you set out for adventure.
+        What were you doing before adventure called you? A life of luxury or poverty? Did you have a job or were you a full time student? This
+        choice determines what skills you developed and what your personality traits might be like before you set out for adventure.
     </p>
     <div class="row panel-group">
         <div class="col-md-4">
