remove bad quote characters

--- a/5e-ancestries.html
+++ b/5e-ancestries.html
@@ -134,7 +134,7 @@
                     <h2 class="panel-title">Gnome</h2>
                 </div>
                 <div class="panel-body">
-                    <p class="text-center">A gnome’s energy and enthusiasm for living shines through every inch of
+                    <p class="text-center">A gnome's energy and enthusiasm for living shines through every inch of
                         their tiny body.</p>
                     <br />
                     <li class="list-group-item">
