--- a/5e-backgrounds.html
+++ b/5e-backgrounds.html
@@ -101,7 +101,7 @@
                 <div class="panel-body">
                     <div class="panel-body">
                         <p class="text-justify">
-                            You are a member of an artisan’s guild, skilled in a particular field and closely associated
+                            You are a member of an artisan's guild, skilled in a particular field and closely associated
                             with other artisans. You are a well-established part of the mercantile
                             world, freed by talent and wealth from the constraints of a feudal social order. You learned
                             your skills as an apprentice to a master artisan, under the
@@ -166,7 +166,7 @@
                     <div class="panel-body">
                         <p class="text-justify">
                             You grew up in the wilds, far from civilization and the comforts of town and technology.
-                            You’ve witnessed the migration of herds larger than forests, survived
+                            You've witnessed the migration of herds larger than forests, survived
                             weather more extreme than any city-dweller could comprehend, and enjoyed the solitude of
                             being the only thinking creature for miles in any direction. The
                             wilds are in your blood, whether you were a nomad, an explorer, a recluse, a
@@ -252,7 +252,7 @@
                             a constant watch out for other desperate souls who might steal
                             from you. You slept on rooftops and in alleyways, exposed to the elements, and endured
                             sickness without the advantage of medicine or a place to recuperate.
-                            You’ve survived despite all odds, and did so through cunning, strength, speed, or some
+                            You've survived despite all odds, and did so through cunning, strength, speed, or some
                             combination of each.
                         </p>
                         <li class="list-group-item"><b>Proficiencies:</b> Sleight of Hand & Stealth</li>
