--- a/5e-classes.html
+++ b/5e-classes.html
@@ -192,7 +192,7 @@
                 <div class="panel-body">
                     <p class="text-center">
                         A thief, assassin, or stealthy character who has a knack for exploiting
-                        their enemies’ weaknesses.
+                        their enemies' weaknesses.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Strike subtly and deal extra damage
                         to your foes while their attention lies elsewhere. Sneak ahead, spot danger, and disarm
