updated class text

--- a/character-options/5e-classes.html
+++ b/character-options/5e-classes.html
@@ -12,13 +12,13 @@
                 </div>
                 <div class="panel-body">
                     <p class="text-center">
-                        Seen by others as a primitive but feared relentless combatant, fueled by
+                        Can be seen by others as a primitive but feared relentless combatant, fueled by
                         their fury and close bonds to the natural order.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Can enter into a rage during battle
                         to deal more damage and take less yourself.</li>
                     <li class="list-group-item"><b>Solves challenges with:</b> Strength and Constitution.</li>
-                    <li class="list-group-item"><b>Probably carrying:</b> Light armor, a shield, a club, 3 handaxes,
+                    <li class="list-group-item"><b>Probably carrying:</b> No armor, a club, 3 handaxes,
                         a belt of daggers, a spear and a big ole sword(or axe)(or both).</li>
                     <br />
                     <small>Complexity: ★☆☆☆</small><br />
@@ -32,7 +32,7 @@
                     <h2 class="panel-title">Bard</h2>
                 </div>
                 <div class="panel-body">
-                    <p class="text-center">An entertainer using his wits, magic, and lore to avoid (or get out of)
+                    <p class="text-center">An entertainer using their wits, magic, and lore to avoid (or get out of)
                         your current predicament.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Cast arcane spells through sheer
@@ -76,7 +76,7 @@
                 </div>
                 <div class="panel-body">
                     <p class="text-center">
-                        A nomad devoted to the powers of Nature - magic and beasts.
+                        A nomad devoted to keeping the power of Nature in balance with the rest of the world.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Cast divine spells, drawing from the
                         essence of nature itself. Transform yourself into a beast for battle or utility.</li>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="panel-body">
                     <p class="text-center">
-                        A martial artist pulling on the power and control over their own body to
+                        A martial artist utilizing their specialized power and control over their own body to
                         accomplish amazing feats.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Your martial techniques allow you to
@@ -168,7 +168,7 @@
                         magic, and martial ability to be a deadly hunter.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Immense knowledge regarding natural
-                        ecosystems, creatures, and travel. Cast divine spells drawing on the essence of nature
+                        ecosystems, creatures, and travel. Cast spells drawing on the essence of nature
                         itself.</li>
                     <li class="list-group-item"><b>Solves challenges with:</b> Dexterity and Wisdom.</li>
                     <li class="list-group-item"><b>Probably carrying:</b> Medium armor, 2 daggers, 2 shortswords, a
@@ -231,8 +231,7 @@
                 </div>
                 <div class="panel-body">
                     <p class="text-center">
-                        A wielder of magic offered from a contractual pact with a powerful
-                        patron.
+                        A wielder of magic fueled from a contractual pact with a powerful patron.
                     </p>
                     <li class="list-group-item"><b>Distinguishing features:</b> Cast arcane spells revealed to you
                         by an otherworldly patron. Augment and and extend your power with eldritch invocations.</li>
